[package]
name = "whiteread"
version = "0.4.0"
authors = ["Michał Krasnoborski <mkrdln@gmail.com>"]

description = "Crate for easily reading whitespace-separated values from strings or input."

documentation = "http://krdln.github.io/whiteread/whiteread/index.html"
homepage = "https://github.com/krdln/whiteread"
repository = "https://github.com/krdln/whiteread"
readme = "README.md"
keywords = ["read", "parse", "input", "scanf", "whitespace", "iostreams"]
license = "MIT"

[[bin]]
name = "whiteread-template"
path = "src/main.rs"
doc = false

[dev-dependencies]
tempfile = "2.1.5"
